--- a/generate_a_site_with_pelican_and_python.ipynb
+++ b/generate_a_site_with_pelican_and_python.ipynb
@@ -281,7 +281,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "fatal: destination path '/root/pelican-themes' already exists and is not an empty directory.\n"
+            "yup."
           ]
         }
       ]
