--- a/generate_a_site_with_pelican_and_python.ipynb
+++ b/generate_a_site_with_pelican_and_python.ipynb
@@ -182,7 +182,7 @@
         "# NB every text file for pelican has to have this metadata, formatted this way\n",
         "# or else you'll get weird errors when you generate the site\n",
         "\n",
-        "%%writefile index.md\n",
+        "%%writefile first-article.md\n",
         "Title: My First Article\n",
         "Date: 2024-07-25 10:44\n",
         "Category: getting-started\n",
@@ -332,9 +332,11 @@
     {
       "cell_type": "code",
       "source": [
+        "!pelican\n",
+        "%cd output\n",
         "from google.colab import output\n",
         "output.serve_kernel_port_as_iframe(8000)\n",
-        "!pelican -r -l"
+        "!python -m http.server"        
       ],
       "metadata": {
         "id": "pqW2SaUXriMf"
